feat: Refactor Kafka event publishing and enhance ShipmentController with OpenAPI documentation
- Refactored KafkaShipmentEventPublisher to delegate event publishing to ShipmentEventProducer.
- Improved error handling and logging in ShipmentEventProducer.
- Enhanced ShipmentController with OpenAPI annotations for better API documentation.
- Added response DTOs for Carrier, Customer, Order, Product, and Store information.
- Configured Kafka producer and consumer settings in application.yaml.
- Implemented OpenAPI configuration for comprehensive API documentation.
- Added test configuration with H2 database and disabled external dependencies.